-solved input drop-down's text-overflow issue in advanced search

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -133,6 +133,23 @@ body {
 .dropdown-half-width {
     width: 49.5%;
     margin-top: 20px;
+    li a {
+        width: 250px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis
+    }
+    li a:hover {
+        width: 250px;
+        white-space: unset;
+        overflow: visible;
+        background: #F8F8F8;
+        color: black;
+        font-weight: 600;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 13px;
+    }
 }
 
 .dropdown-half-width .dropdown-toggle {
@@ -142,6 +159,23 @@ body {
 .dropdown-full-width {
     width: 100%;
     margin-top: 20px;
+    li a {
+        width: 500px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis
+    }
+    li a:hover {
+        width: 500px;
+        white-space: unset;
+        overflow: visible;
+        background: #F8F8F8;
+        color: black;
+        font-weight: 600;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 13px;
+    }
 }
 
 .dropdown-full-width .dropdown-toggle {
@@ -221,7 +255,7 @@ img {
 }
 
 .image-card-group {
-    margin: 25px auto;
+    margin: 0px auto;
 }
 
 .form-control:hover {
@@ -277,7 +311,7 @@ img {
     margin: 20px;
     border-radius: 5px;
     position: absolute;
-    margin-top: 35px;
+    margin-top: 33px;
 }
 
 .search-result-page {
@@ -314,7 +348,7 @@ img {
 }
 
 .filter-label-group {
-    margin-top: 25px;
+    margin-top: 15px;
     .filter-label {
         background-color:#E5E9EF;
         color: #494949;
@@ -340,6 +374,7 @@ img {
 
 .sticky-content.fixed{
   position: fixed;
+  margin-top: 15px;
   top: 5px;
   left: 0;
   right: 0;
